--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.8.3",
+    "framer-motion": "^11.0.8",
     "gh-pages": "^4.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
